=============================================================================
Version 3.2
=============================================================================
Patchlevel 9 (Nov 2022)

NEW FEATURES:
	o Text objects are rendered using the xft library.
	o Relative, not absolute paths to embedded picture files are written
	  to .fig files. This makes it easier to move and share .fig files.

BUGS FIXED:
	Ticket numbers refer to https://sourceforge.net/p/mcj/tickets/#.
	o Compounds keep their their size after editing or updating, ticket #51.
	o Avoid crashing for large scaling, e.g., xfig -userscale 100, #144.
	o Fix crashing when embedding a pdf as the first picture, ticket #143.

-----------------------------------
Patchlevel 8b (Aug 2021)

BUGS FIXED:
	o Adding points to splines works if boxes are present in the figure.
	o Stay in the working directory when browsing picture files.

-----------------------------------
Patchlevel 8a (Mar 2021)

BUGS FIXED:
	o Distribute a current pdf documentation.
	  Thanks to Roland Rosenfeld for the script and pointing out the issue.

-----------------------------------
Patchlevel 8 (Dec 2020)

USER INTERFACE CHANGES:
	o Shift + Wheel Up pans left, Shift + Wheel Down pans right.
	  Alt or Meta + Wheel Up pops up the edit panel, Alt or Meta + Wheel
	  Down pops up the drawing panel. Previously, Shift + Wheel Up or Down
	  popped up the edit or drawing panel, respectively, and panning
	  sideways could only be achieved by moving the wheel sideways.

NEW FEATURES:
	o To display gif image files, either giftopnm and ppmtopcx from the
	  netpbm package, imagemagick, or graphicsmagick must be installed.
	o Obey the resolution given in embedded png, tiff and jpeg image files.
	o Embedded image files are displayed in full color, not reduced to
	  a maximum of 256 colors.
	o Display embedded pdf files.

BUGS FIXED:
	o Read version 1.3 fig files.
	o The default resolution of embedded raster images is changed
	  from 80 dpi to 72 dpi.